<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CEDDED">
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/biaoti"
        android:textSize="20sp"
        android:textColor="#fff000"
        android:shadowColor="#00ffff"
        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:background="@drawable/lll"/>
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhanghao"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText 
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/et_shape"/>
       
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mima"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <EditText 
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:background="@drawable/et_shape"/>
    </LinearLayout>
    
        <Button 
            android:id="@+id/bt_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/zhuce"
            android:textSize="20sp"
            android:background="@drawable/bt_selector"/>
        <Button 
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/quxiao"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bt_selector"/>
    
</LinearLayout>
